# chaostoolkit-extension-template

./: .gitignore  CHANGELOG.md  Makefile  README.md  ci.bash  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml  release.yaml
chaosext/: __init__.py  __version__.py  actions.py  probes.py
tests/: test_actions.py  test_probes.py
